# family-tree-backend

./: .cz.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  seed_iteams.sample.py
.github/workflows/: ci.yml  docker.yml  main.yml
app/: main.py
app/application/: unit_of_work.py
app/application/dto/: auth_dto.py
app/application/interfaces/: token_service.py
app/application/services/: authorization_service.py  unit_of_work.py
app/application/use_cases/: login_user.py
app/celery/: __init__.py  celery_app.py
app/celery/tasks/: backup.py  sync_relationships.py
app/core/: celery.py  config.py
app/domain/constants/: permissions.py
app/domain/entities/: marriage.py  permission.py  person.py  role.py  user.py
app/domain/exceptions/: auth_exceptions.py  common.py  marriage_exceptions.py  permission_exceptions.py  person_exceptions.py  role_exceptions.py  user_exceptions.py
app/domain/repositories/: family_tree_repository.py  marriage_repository.py  permission_repository.py  person_repository.py  role_repository.py  user_repository.py
app/domain/services/: marriage_rules.py  password_hasher.py
app/infrastructure/: context.py  logging.py
app/infrastructure/database/: base.py  seed.py  session.py
app/infrastructure/repositories/: marriage_repository_sql.py  neo4j_family_tree_repository.py  permission_repository_sql.py  person_repository_sql.py  role_repository_sql.py  user_repository_sql.py
app/infrastructure/security/: jwt_service.py  password_hasher_impl.py
app/infrastructure/unit_of_work/: sqlalchemy_uow.py
app/infrastructure/utils/: context.py  logging.py  neo4j_normalizer.py
app/presentation/rest/: dependencies.py
app/utils/: app_exception.py  error_codes.py  neo4j_normalizer.py
app/worker/: __init__.py  celery_app.py
migrations/: env.py
migrations/versions/: 10dbf40ac7aa_unique_person_s_name.py  1f77f42995da_initial_schema.py  468ab146bc68_uniqe_persons_name_with_father_and_.py  5ed287428c2d_autoincrement_id.py  7da575065536_initial_schema.py  9fafa5c9c46d_add_lazy_joined_for_role_permissions.py  d9f299c48c6a_message.py  e0c82c8fd577_message.py  e836da88aa95_message.py
tests/e2e/: auth_headers.py  conftest.py
tests/integration/: conftest.py
tests/unit/: conftest.py
(+168 files in other folders)
