[project]
name = "family-tree-backend"
version = "0.1.0"
description = "Family tree backend base on FastApi"
authors = [
    {name = "arash alfooneh",email = "arash.alfooneh@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "commitizen (>=4.13.10,<5.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "jdatetime (>=5.2.0,<6.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "swagger-ui-bundle (>=1.1.0,<2.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    "migrations",
    "build",
    "dist",
]
