[project]
name = "family-tree-backend"
version = "0.1.0"
description = "Family tree backend base on FastApi"
authors = [
    {name = "arash alfooneh",email = "arash.alfooneh@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "commitizen (>=4.13.10,<5.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "jdatetime (>=5.2.0,<6.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "swagger-ui-bundle (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery[redis] (>=5.6.3,<6.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "neo4j (>=6.2.0,<7.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "bandit (>=1.9.4,<2.0.0)",
    "mypy (>=2.0.0,<3.0.0)",
    "neo4j-backup (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    "migrations",
    "build",
    "dist",
    "**/models/__init__.py",
]
[dependency-groups]
dev = [
    "pytest-cov (>=7.1.0,<8.0.0)"
]
